# gh-worktree

./: .aiignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  gh-worktree.spec  pyproject.toml
.gh/worktree/templates/: AGENTS.md
.gh/worktree/templates/.aiassistant/rules/: tests.md
.gh/worktree/templates/.gemini/: styleguide.md
.github/workflows/: build.yml  pytest.yml  release.yml
src/gh_worktree/: __init__.py  __main__.py  cli.py  command.py  config.py  context.py  gh.py  git.py  hooks.py  main.py  operator.py  runtime.py  templates.py  utils.py
src/gh_worktree/commands/: checkout.py  create.py  init.py  install.py  remove.py
tests/: test_gh.py  test_git.py  test_hooks.py  test_runtime.py  test_templates.py  test_utils.py
tests/commands/: test_checkout.py  test_create.py  test_init.py  test_install.py  test_remove.py
