[project]
name = "gh-worktree"
version = "0.1.1"
description = "github CLI extension for worktrees"
readme = "README.md"
authors = [
    { name = "Blaine Jester", email = "bjester@quavalent.com" }
]
license = {text = "MIT"}
keywords = ["git", "github", "worktree", "cli", "development"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = [
    "fire>=0.7.1",
]

[project.scripts]
gh-worktree = "gh_worktree.cli:main"

[project.urls]
Homepage = "https://github.com/bjester/gh-worktree"
Repository = "https://github.com/bjester/gh-worktree"
Issues = "https://github.com/bjester/gh-worktree/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "exceptiongroup; python_version < '3.11'",
    "pre-commit"
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 100
max-complexity = 10

[tool.uv.build-backend]
source-exclude = [
    ".envrc",
    ".idea/",
    ".git/",
    "dist/"
]
wheel-exclude = [
    ".github/",
    ".gitignore/",
    ".precommit-config.yaml",
    ".venv/",
    "Makefile",
    "tests/"
]
